--- a/pom.xml
+++ b/pom.xml
@@ -6,27 +6,32 @@
 
   <groupId>com.srhojo.utils</groupId>
   <artifactId>restclient</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <name>restclient</name>
-  <!-- FIXME change it to the project's website -->
-  <url>https://github.com/srhojo</url>
+  <url>https://github.com/srhojo/RestClient</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    
     <spring.version>5.1.8.RELEASE</spring.version>
+    <javax.validation.version>2.0.1.Final</javax.validation.version>
+    <com.fasterxml.jackson.core.version>[2.9.9.1,)</com.fasterxml.jackson.core.version>
+    <io.springfox.swagger.version>2.9.2</io.springfox.swagger.version>
+    <junit.version>4.11</junit.version>
+    <mockito.version>2.28.2</mockito.version>
+    
+    <jacoco.version>0.8.4</jacoco.version>
+	<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+	<sonar.language>java</sonar.language>
+    <sonar.exclusions>
+		**/RestClientConfiguration.java
+	</sonar.exclusions>
   </properties>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
-      <version>2.0.1.Final</version>
-    </dependency>
-
     <!-- Spring -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -50,69 +55,98 @@
       <version>${spring.version}</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-core -->
+  	<!-- Validations -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>${javax.validation.version}</version>
+    </dependency>
+	
+	<!-- Object binding -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>  
+  		<version>${com.fasterxml.jackson.core.version}</version>
+	</dependency>
+
+   <!-- Swagger-core -->
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.9.2</version>
+      <version>${io.springfox.swagger.version}</version>
     </dependency>
 
+	<!-- Testing -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>${junit.version}</version>
+		<scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>2.6.4</version>
-      </dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-core</artifactId>
+		<version>${mockito.version}</version>
+		<scope>test</scope>
+	</dependency>
+    
+    
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+  	<pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+             		<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+						    <goal>copy-resources</goal>
+						</goals>
+						<configuration>
+						    <outputDirectory>
+						        ${basedir}/target/</outputDirectory>
+						    <resources>
+						        <resource>
+						            <directory>
+						                ${basedir}/src/test/resources/ </directory>
+						            <includes>
+						                <include>jacoco.exec</include>
+						            </includes>
+						        </resource>
+						    </resources>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+				    <encoding>cp1252</encoding>
+				</configuration>
+			</plugin>								
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+					<executions>
+					    <execution>
+					        <id>default-prepare-agent</id>
+					        <goals>
+					            <goal>prepare-agent</goal>
+					        </goals>
+					    </execution>
+					    <execution>
+					        <id>default-report</id>
+					        <phase>prepare-package</phase>
+					        <goals>
+					            <goal>report</goal>
+					        </goals>
+					    </execution>
+					</executions>
+			</plugin>
+		</plugins>
+	</pluginManagement>
   </build>
 </project>
