--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
     <javax.validation.version>2.0.1.Final</javax.validation.version>
     <com.fasterxml.jackson.core.version>[2.9.9.1,)</com.fasterxml.jackson.core.version>
     <io.springfox.swagger.version>2.9.2</io.springfox.swagger.version>
-    <junit.version>4.11</junit.version>
-    <mockito.version>2.28.2</mockito.version>
+    <spring-boot-starter-test.version>2.1.6.RELEASE</spring-boot-starter-test.version>
     
     <jacoco.version>0.8.4</jacoco.version>
 	<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
@@ -77,20 +76,13 @@
     </dependency>
 
 	<!-- Testing -->
-    <dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>${junit.version}</version>
-		<scope>test</scope>
-    </dependency>
 	<dependency>
-		<groupId>org.mockito</groupId>
-		<artifactId>mockito-core</artifactId>
-		<version>${mockito.version}</version>
-		<scope>test</scope>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-test</artifactId>
+	    <version>${spring-boot-starter-test.version}</version>
+	    <scope>test</scope>
 	</dependency>
-    
-    
+	
   </dependencies>
 
   <build>
