--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 
   <build>
 	<plugins>
-		<plugin>
+		<!-- <plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-javadoc-plugin</artifactId>
 			<executions>
@@ -120,8 +120,8 @@
 					</goals>
 				</execution>
 			</executions>
-		</plugin>
-		<plugin>
+		</plugin> -->
+		<!-- <plugin>
 			<groupId>org.jacoco</groupId>
 			<artifactId>jacoco-maven-plugin</artifactId>
 			<version>${jacoco.version}</version>
@@ -140,7 +140,7 @@
 				        </goals>
 				    </execution>
 				</executions>
-		</plugin>
+		</plugin> -->
 	</plugins>
   </build>
 </project>
